syntax = "proto3";

package demo;

service DemoService {
  rpc Find (Demo) returns (stream Demo);
}

message Demo {
  int32 _id = 1;
  string name = 2;
  int32 status = 3;
  string separateAt = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

